--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,10 @@
 <project>
    <modelVersion>4.0.0</modelVersion>
   <groupId>br.com.asw</groupId>
-  <artifactId>final</artifactId>
+  <artifactId>asw</artifactId>
   <version>1.0.0</version>
   <packaging>pom</packaging>
+  <modules>
+  	<module>asw4J</module>
+  </modules>
 </project>
