Configuração do ambiente para banco de dados e angular2

--- a/asw-db/Dockerfile
+++ b/asw-db/Dockerfile
@@ -1,39 +1,24 @@
-FROM ubuntu:latest
+FROM oraclelinux:latest
+ENV PACKAGE_URL https://repo.mysql.com/yum/mysql-5.7-community/docker/x86_64/mysql-community-server-minimal-5.7.13-1.el7.x86_64.rpm
 
-MAINTAINER Cleber Barcelos <barcelos.cbc@gmail.com>
-LABEL Description="Banco de Dados MySql" Vendor="ASW Puc Minas OF05" Version="1.0"
+# Install server
+RUN rpmkeys --import http://repo.mysql.com/RPM-GPG-KEY-mysql \
+  && yum install -y $PACKAGE_URL \
+  && yum install -y libpwquality \
+  && rm -rf /var/cache/yum/*
+RUN mkdir /docker-entrypoint-initdb.d
 
-# Install latest updates
-RUN apt-get update 
-RUN apt-get upgrade -y
-RUN apt-get install -y vim 
+VOLUME /var/lib/mysql
 
-# Install mysql client and server
-RUN echo "mysql-server mysql-server/root_password password root" | debconf-set-selections && \
-	echo "mysql-server mysql-server/root_password_again password root" | debconf-set-selections && \
-	apt-get -y install mysql-client mysql-server curl
+COPY scripts /docker-entrypoint-initdb.d
 
-# Enable remote access (default is localhost only, we change this
-# otherwise our database would not be reachable from outside the container)
-RUN sed -i -e"s/^bind-address\s*=\s*127.0.0.1/bind-address = 0.0.0.0/" /etc/mysql/my.cnf
+ADD docker-entrypoint.sh /entrypoint.sh
+RUN sed -i 's/\r//' /entrypoint.sh
+ENV MYSQL_ROOT_PASSWORD=root
 
-#Iniciando o mysql
-RUN /etc/init.d/mysql start
+ENTRYPOINT ["/entrypoint.sh"]
 
-# Install database
-ADD ./database.sql /var/db/database.sql
+RUN mysql -uroot -proot < /import.sql &
 
-# Set Standard settings
-ENV user student
-ENV password secret
-ENV url file:/var/db/database.sql
-ENV right WRITE
-
-# Install starting script
-ADD ./start-database.sh /usr/local/bin/start-database.sh
-RUN sed -i 's/\r//' /usr/local/bin/start-database.sh
-RUN chmod +x /usr/local/bin/start-database.sh
-
-EXPOSE 3306
-
-CMD ["/usr/local/bin/start-database.sh"]
+EXPOSE 3306 33060
+CMD ["mysqld"]
